--- a/root/css/homeStyle.css
+++ b/root/css/homeStyle.css
@@ -43,7 +43,7 @@ footer {
   margin:  10% 5%;
 }
 .foostPart {
-  margin-top: 0%;
+  margin-top: 5%;
   text-align: left;
   margin-bottom: 0px;
 }
